--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,7 +1,9 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/cvusyr3283/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/cvusyr3283/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/cvusyr3283/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/cvusyr3283/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/cvusyr3283/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/cvusyr3283/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/cvusyr3283/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/cvusyr3283/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/cvusyr3283/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/cvusyr3283/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/cvusyr3283/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/cvusyr3283/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/cvusyr3283/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/cvusyr3283/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/cvusyr3283/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/cvusyr3283/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/cvusyr3283/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/cvusyr3283/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/cvusyr3283/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/cvusyr3283/www/master/t/djy/12a.jpg" title="头条"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p> <a href="https://github.com/cvusyr3283/www/blob/master/README.md#1" target="_blank">翻墙</a> | <a href="https://gitlab.com/szzdlab/vdwl/raw/master/wl.webm" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/vdhG75Ez1eTyeZN/raw/master/hG75Ez1eTyeZN.webm" target="_blank">归途</a> | <a href="https://gitlab.com/szzdlab/vdYongHeng-360p/raw/master/YongHeng-360p.webm" target="_blank">永恒</a> | <a href="https://gitlab.com/szzdlab/vdLijianhui-200804-720/raw/master/Lijianhui-200804-720.webm" target="_blank">回归</a> | <a href="https://gitlab.com/szzdlab/vddmt/raw/master/dmt.webm" target="_blank">江鬼</a> | <a href="https://gitlab.com/szzdlab/vdszt/raw/master/szt.webm" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/vdUc6y/raw/master/Uc6y.webm" target="_blank">渐冻人</a> | <a href="https://gitlab.com/szzdlab/vd425/raw/master/425.webm" target="_blank">四二五</a> | <a href="https://gitlab.com/szzdlab/vdlin-720p/raw/master/lin-720p.webm" target="_blank">世界小姐</a> | <a href="https://gitlab.com/szzdlab/vdwnrl/raw/master/wnrl.webm" target="_blank">为你而来</a> | <a href="https://gitlab.com/szzdlab/vd5Vu3_XS2V/raw/master/5Vu3_XS2V.webm" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/vdzjmd1_19/raw/master/zjmd1_19.webm" target="_blank">终级目的</a> | <a href="https://gitlab.com/szzdlab/vdmtdwh/raw/master/mtdwh.webm" target="_blank">漫谈党文化</a></p><p><a href="https://gitlab.com/szzdlab/vd9p/raw/master/9p.webm" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/vdzfzx/raw/master/zfzx.webm" target="_blank">伪火</a> | <a href="https://gitlab.com/szzdlab/vd1400forge-1210/raw/master/1400forge-1210.webm" target="_blank">剖析</a> | <a href="https://gitlab.com/szzdlab/vd3-JTT_CN_MH-360p/raw/master/3-JTT_CN_MH-360p.webm" target="_blank">旅程</a> | <a href="https://gitlab.com/szzdlab/vd5-YiSu_MH-360p/raw/master/5-YiSu_MH-360p.webm" target="_blank">义诉</a> | <a href="https://gitlab.com/szzdlab/vd5N.8/raw/master/5N.8.webm" target="_blank">罪恶</a> | <a href="https://gitlab.com/szzdlab/vdTdowhauWx9WiM/raw/master/TdowhauWx9WiM.webm" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/vd1-Xuezhongmei_MH-360p/raw/master/1-Xuezhongmei_MH-360p.webm" target="_blank">雪中梅</a> | <a href="https://gitlab.com/szzdlab/vdguanguimin/raw/master/guanguimin.webm" target="_blank">歌唱家</a> | <a href="https://gitlab.com/szzdlab/vdhuangxiaomin-tuidang/raw/master/huangxiaomin-tuidang.webm" target="_blank">奥运名将</a> | <a href="https://gitlab.com/szzdlab/vdwm/raw/master/wm.webm" target="_blank">告诉未来</a> | <a href="https://gitlab.com/szzdlab/vdqh/raw/master/qh.webm" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/vdhongchaoyinmou-hi/raw/master/hongchaoyinmou-hi.webm" target="_blank">红朝阴谋</a> | <a href="https://gitlab.com/szzdlab/vdfy/raw/master/fy.webm" target="_blank">风雨天地行</a></p></td></tr>
-<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565742.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2020/11/AFP_China-construction-worker-320x200.jpg"><p align="center">中国债务累计至GDP3.3倍 企业债居半</p></a>
+<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565157.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2020/11/038-600x400-1-320x200.jpg"><p align="center">【直播】美各州挺川集会 制止拜登窃选</p></a>
+<a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565157.md#1" title="【直播】美各州挺川集会 制止拜登窃选""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/038-600x400-1-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565742.md#1" title="中国债务累计至GDP3.3倍 企业债居半""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/AFP_China-construction-worker-320x200.jpg">&nbsp;</a>
-<a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565761.md#1" title="【大选更新11.21】美50州再游行 挺川普""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/IMG_2543-1-320x200.jpg">&nbsp;</a>
+<a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565761.md#1" title="【大选更新11.21】川普：乔州舞弊信息将出炉""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1286743499-320x200.jpg">&nbsp;</a>
+<a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/20/n12564664.md#1" title="《狮子王》复仇记：王位之争即正邪大战""><img width="73" src="https://i.epochtimes.com/assets/uploads/2019/07/1907161125101470-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565131.md#1" title="川普政府拟再把四中企列入中共军企黑名单""><img width="73" src="https://i.epochtimes.com/assets/uploads/2013/01/1010201428232208-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/20/n12564746.md#1" title="鲍威尔：四敌国介入过美国大选制表服务器""><img width="73" src="https://i.epochtimes.com/assets/uploads/2017/09/GettyImages-459271274-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12564953.md#1" title="美议员提新法案 禁投资黑名单上中国企业""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/A4-115-1-320x200.jpg">&nbsp;</a>
@@ -10,15 +12,13 @@
 <a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12564900.md#1" title="麦肯娜尼：为了“宪法程序” 川普不应让步""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/000_1R17CJ-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/20/n12564658.md#1" title="沈舟：美太空军星链计划应对中共威胁""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/200928-N-NO204-0001-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/20/n12564539.md#1" title="上海夫妇染疫 南汇中心医院进微博热搜前三""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/L3L3fffoksVKHQ6G9cC6-320x200.jpg">&nbsp;</a>
-<a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/20/n12564609.md#1" title="川普律师证实美军没收德国的Scytl服务器""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/470018-320x200.jpg">&nbsp;</a>
-<a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/20/n12564524.md#1" title="鲍威尔：未来两周内 将选举舞弊证据呈堂""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/Sidney-Powell-EpochTimes_510A8621-700x420-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/cvusyr3283/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://cvusyr3283.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>55分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12566092.md#1">拟对出生公民权采取行动 川普政府重启讨论</a><br>
+:clock8: <em>10分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565157.md#1">【直播】美各州挺川集会 制止拜登窃选</a><br>
+:clock8: <em>24分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12566175.md#1">APEC峰会 川普与习近平都说了些啥</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12566092.md#1">拟对出生公民权采取行动 川普政府重启讨论</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565835.md#1">APEC领袖会议登场 张忠谋：愿分享台防疫经验</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565924.md#1">联邦参议员候选人：密歇根应延迟大选认证</a><br>
+:clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565924.md#1">联邦参议员候选人：密歇根应延迟大选认证</a><br>
 :clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565243.md#1">流浪犬吃饱仍叼碗不放 真实原因令人动容</a><br>
-:clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565534.md#1">美房产商买二手房翻修 发现大量现金速归还</a><br>
-:clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565901.md#1">李怀庆庭审当天 公民记者路过法院被传唤</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/20/n12562519.md#1">浙江早餐店“翻墙”播境外节目 遭罚款断网</a><br>
 <a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/20/n12563068.md#1">【翻墙必看】川普获压倒性胜利将获证实</a><br>
@@ -40,7 +40,7 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 367,958,191 人
+!共 367,960,281 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
@@ -112,10 +112,10 @@
 <a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/10/22/n12493565.md#1">【独家】1年抗议逾百起 湛江防民如防川</a><br>
 <a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/10/24/n12498279.md#1">揭秘：拜登家族与爆料人关系是如何破裂的</a><br>
 <a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/9/24/n12426629.md#1">【独家】揭秘打压“诉江潮”的中共帮凶</a><br>
-<br><p align="center"><a href="https://github.com/cvusyr3283/djy/blob/master/gb/nf6092.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>传统文化</strong></p></h2><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/20/n12564664.md#1">《狮子王》复仇记：王位之争即正邪大战</a><br>
-<a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/10/27/n12504604.md#1">【命理】善恶一念之转 命运随之转</a><br>
+<br><p align="center"><a href="https://github.com/cvusyr3283/djy/blob/master/gb/nf6092.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>传统文化</strong></p></h2><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/10/27/n12504604.md#1">【命理】善恶一念之转 命运随之转</a><br>
 <a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/5/n12527927.md#1">【敦煌寻梦】丝绸之路上的明珠</a><br>
 <a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/10/26/n12503755.md#1">北宋名将滥杀降军 这笔业债如何还？</a><br>
 <a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/10/22/n12495148.md#1">德与财的故事：曾国藩和林则徐的选择</a><br>
 <a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/16/n12554038.md#1">【魏晋选举】之二：士族辉煌 耀亮门第</a><br>
+<a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/6/n12531008.md#1">【成吉思汗】占领中都 夺取金国半壁河山</a><br>
 <br><p align="center"><a href="https://github.com/cvusyr3283/djy/blob/master/gb/news2007.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>九评共产党</strong></p></h2><a href="https://github.com/cvusyr3283/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">【一】评共产党是什么</a><br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">【二】评中国共产党是怎样起家的</a><br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">【三】评中国共产党的暴政</a><br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">【四】评共产党是反宇宙的力量</a><br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">【五】评江泽民与中共相互利用迫害法轮功</a><br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">【六】评中国共产党破坏民族文化</a><br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">【七】评中国共产党的杀人历史</a><br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">【八】评中国共产党的邪教本质</a><br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">【九】评中国共产党的流氓本性</a></td><td VALIGN=TOP width="352"><h2><p><strong>大纪元重要书籍</strong></p></h2><a href="https://github.com/cvusyr3283/djy/blob/master/gb/nf3541.md#1" target="_blank">《九评共产党》</a><br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/nf1235328.md#1" target="_blank">《共产主义的终极目的》</a><br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/nf1267582.md#1" target="_blank">《魔鬼在统治着我们的世界》</a><br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/nf3628.md#1" target="_blank">《解体党文化》</a><br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/nf1242535.md#1" target="_blank">《真实的江泽民》</a><br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/nf1138304.md#1" target="_blank">《中国历史正述》</a><br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/nf1076978.md#1" target="_blank">《千古英雄人物》</a><br><br><p align="center"><a href="https://github.com/cvusyr3283/djy/blob/master/gb/nf3046.md#1">更多......</a></p></td></tr></table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/cvusyr3283/djy/blob/master/gb/nf1351518.md#1<br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/nf1351518.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/cvusyr3283/djy/blob/master/gb/nf1351518.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nf1351518.htm">https://www.epochtimes.com/gb/nf1351518.htm</a>    （国内需<a href="https://github.com/cvusyr3283/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
