--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -13,12 +13,12 @@
 <a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12564900.md#1" title="麦肯娜尼：为了“宪法程序” 川普不应让步""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/000_1R17CJ-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/20/n12564658.md#1" title="沈舟：美太空军星链计划应对中共威胁""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/200928-N-NO204-0001-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/cvusyr3283/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://cvusyr3283.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>4分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12566226.md#1">农民今年损失惨重 中共却开征私产宅基地费</a><br>
-:clock8: <em>31分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12566285.md#1">【财商天下】债市连环违约 中企在美圈钱败退</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565157.md#1">【直播】美各州挺川集会 制止拜登窃选</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12566175.md#1">APEC峰会 川普与习近平都说了些啥</a><br>
-:clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12566092.md#1">拟对出生公民权采取行动 川普政府重启讨论</a><br>
-:clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565835.md#1">APEC领袖会议登场 张忠谋：愿分享台防疫经验</a><br>
+:clock8: <em>5分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12566004.md#1">【名家专栏】川普的成就和未来的方向</a><br>
+:clock8: <em>18分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565965.md#1">美国老人买东西钱不够 18岁超市员工帮付款</a><br>
+:clock8: <em>27分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12566315.md#1">威州二县重计票 川普寻求作废数万缺席选票</a><br>
+:clock8: <em>51分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12566226.md#1">农民今年损失惨重 中共却开征私产宅基地费</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12566285.md#1">【财商天下】债市连环违约 中企在美圈钱败退</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565157.md#1">【直播】美各州挺川集会 制止拜登窃选</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/20/n12562519.md#1">浙江早餐店“翻墙”播境外节目 遭罚款断网</a><br>
 <a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/20/n12563068.md#1">【翻墙必看】川普获压倒性胜利将获证实</a><br>
@@ -29,18 +29,18 @@
 <a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/20/n12563148.md#1">大陆多地新增确诊病例 纷纷出台限制令</a><br>
 <a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/19/n12561830.md#1">台胞控诉福建警方包庇害子嫌犯 要亡党亡国</a><br>
 <br><p align="center"><a href="https://github.com/cvusyr3283/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>纪元推荐</strong></p></h2>
+<a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/20/n12563838.md#1">【名家专栏】藏在健康气候议题下的权欲</a><br>
 <a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/16/n12552112.md#1">【独家】在海外为中共牵线的关键人物</a><br>
 <a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/19/n12562260.md#1">鲍威尔：我们即将证明川普获压倒性胜利</a><br>
 <a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/19/n12561962.md#1">沈舟：中共挑衅却引来新一轮军事反制</a><br>
 <a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/19/n12561412.md#1">【一线采访】青岛滨海学院封校 学生：要疯了</a><br>
 <a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/18/n12559549.md#1">【一线采访】天津疫情社区传播 一医院被封</a><br>
 <a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/17/n12556030.md#1">【独家】中共培训东南亚国家警官的背后</a><br>
-<a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/19/n12559715.md#1">田云：劫持美国大选 左派发动中共式超限战</a><br>
 <br><p align="center"><a href="https://github.com/cvusyr3283/djy/blob/master/gb/news392.md#1">更多......</a></p><hr><h2 align="center"><strong align="center">
 
 ```diff
 !退出中共党、团、队总人数:
-!共 367,961,915 人
+!共 367,962,121 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
