--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,7 +1,7 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/cvusyr3283/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/cvusyr3283/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/cvusyr3283/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/cvusyr3283/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/cvusyr3283/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/cvusyr3283/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/cvusyr3283/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/cvusyr3283/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/cvusyr3283/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/cvusyr3283/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/cvusyr3283/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/cvusyr3283/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/cvusyr3283/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/cvusyr3283/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/cvusyr3283/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/cvusyr3283/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/cvusyr3283/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/cvusyr3283/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/cvusyr3283/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/cvusyr3283/www/master/t/djy/12a.jpg" title="头条"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p> <a href="https://github.com/cvusyr3283/www/blob/master/README.md#1" target="_blank">翻墙</a> | <a href="https://gitlab.com/szzdlab/vdwl/raw/master/wl.webm" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/vdhG75Ez1eTyeZN/raw/master/hG75Ez1eTyeZN.webm" target="_blank">归途</a> | <a href="https://gitlab.com/szzdlab/vdYongHeng-360p/raw/master/YongHeng-360p.webm" target="_blank">永恒</a> | <a href="https://gitlab.com/szzdlab/vdLijianhui-200804-720/raw/master/Lijianhui-200804-720.webm" target="_blank">回归</a> | <a href="https://gitlab.com/szzdlab/vddmt/raw/master/dmt.webm" target="_blank">江鬼</a> | <a href="https://gitlab.com/szzdlab/vdszt/raw/master/szt.webm" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/vdUc6y/raw/master/Uc6y.webm" target="_blank">渐冻人</a> | <a href="https://gitlab.com/szzdlab/vd425/raw/master/425.webm" target="_blank">四二五</a> | <a href="https://gitlab.com/szzdlab/vdlin-720p/raw/master/lin-720p.webm" target="_blank">世界小姐</a> | <a href="https://gitlab.com/szzdlab/vdwnrl/raw/master/wnrl.webm" target="_blank">为你而来</a> | <a href="https://gitlab.com/szzdlab/vd5Vu3_XS2V/raw/master/5Vu3_XS2V.webm" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/vdzjmd1_19/raw/master/zjmd1_19.webm" target="_blank">终级目的</a> | <a href="https://gitlab.com/szzdlab/vdmtdwh/raw/master/mtdwh.webm" target="_blank">漫谈党文化</a></p><p><a href="https://gitlab.com/szzdlab/vd9p/raw/master/9p.webm" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/vdzfzx/raw/master/zfzx.webm" target="_blank">伪火</a> | <a href="https://gitlab.com/szzdlab/vd1400forge-1210/raw/master/1400forge-1210.webm" target="_blank">剖析</a> | <a href="https://gitlab.com/szzdlab/vd3-JTT_CN_MH-360p/raw/master/3-JTT_CN_MH-360p.webm" target="_blank">旅程</a> | <a href="https://gitlab.com/szzdlab/vd5-YiSu_MH-360p/raw/master/5-YiSu_MH-360p.webm" target="_blank">义诉</a> | <a href="https://gitlab.com/szzdlab/vd5N.8/raw/master/5N.8.webm" target="_blank">罪恶</a> | <a href="https://gitlab.com/szzdlab/vdTdowhauWx9WiM/raw/master/TdowhauWx9WiM.webm" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/vd1-Xuezhongmei_MH-360p/raw/master/1-Xuezhongmei_MH-360p.webm" target="_blank">雪中梅</a> | <a href="https://gitlab.com/szzdlab/vdguanguimin/raw/master/guanguimin.webm" target="_blank">歌唱家</a> | <a href="https://gitlab.com/szzdlab/vdhuangxiaomin-tuidang/raw/master/huangxiaomin-tuidang.webm" target="_blank">奥运名将</a> | <a href="https://gitlab.com/szzdlab/vdwm/raw/master/wm.webm" target="_blank">告诉未来</a> | <a href="https://gitlab.com/szzdlab/vdqh/raw/master/qh.webm" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/vdhongchaoyinmou-hi/raw/master/hongchaoyinmou-hi.webm" target="_blank">红朝阴谋</a> | <a href="https://gitlab.com/szzdlab/vdfy/raw/master/fy.webm" target="_blank">风雨天地行</a></p></td></tr>
-<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565157.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2020/11/download-44-320x200.jpg"><p align="center">【直播】美各州挺川集会 制止拜登窃选</p></a>
-<a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565157.md#1" title="【直播】美各州挺川集会 制止拜登窃选""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/download-44-320x200.jpg">&nbsp;</a>
+<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12566226.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2020/11/1110290246031758-600x400-320x200.jpg"><p align="center">农民今年损失惨重 中共却开征私产宅基地费</p></a>
 <a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12566226.md#1" title="农民今年损失惨重 中共却开征私产宅基地费""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/1110290246031758-600x400-320x200.jpg">&nbsp;</a>
+<a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565157.md#1" title="【直播】美各州挺川集会 制止拜登窃选""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/download-44-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565742.md#1" title="中国债务累计至GDP3.3倍 企业债居半""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/AFP_China-construction-worker-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565761.md#1" title="【大选更新11.21】川普：乔州舞弊信息将出炉""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1286743499-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/20/n12564664.md#1" title="《狮子王》复仇记：王位之争即正邪大战""><img width="73" src="https://i.epochtimes.com/assets/uploads/2019/07/1907161125101470-320x200.jpg">&nbsp;</a>
@@ -13,12 +13,12 @@
 <a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12564900.md#1" title="麦肯娜尼：为了“宪法程序” 川普不应让步""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/000_1R17CJ-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/20/n12564658.md#1" title="沈舟：美太空军星链计划应对中共威胁""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/200928-N-NO204-0001-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/cvusyr3283/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://cvusyr3283.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>8分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565157.md#1">【直播】美各州挺川集会 制止拜登窃选</a><br>
-:clock8: <em>22分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12566305.md#1">研究：戴口罩对预防中共病毒无显着效果</a><br>
-:clock8: <em>32分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12566190.md#1">【一线采访】内蒙爆疫情 满洲里封城 火车停运</a><br>
-:clock8: <em>38分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12566004.md#1">【名家专栏】川普的成就和未来的方向</a><br>
-:clock8: <em>51分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565965.md#1">美国老人买东西钱不够 18岁超市员工帮付款</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12566315.md#1">威州二县重计票 川普寻求作废数万缺席选票</a><br>
+:clock8: <em>4分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12566305.md#1">研究：戴口罩对预防中共病毒无显着效果</a><br>
+:clock8: <em>14分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12566190.md#1">【一线采访】内蒙爆疫情 满洲里封城 火车停运</a><br>
+:clock8: <em>20分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12566004.md#1">【名家专栏】川普的成就和未来的方向</a><br>
+:clock8: <em>33分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565965.md#1">美国老人买东西钱不够 18岁超市员工帮付款</a><br>
+:clock8: <em>42分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12566315.md#1">威州二县重计票 川普寻求作废数万缺席选票</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12566226.md#1">农民今年损失惨重 中共却开征私产宅基地费</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/20/n12562519.md#1">浙江早餐店“翻墙”播境外节目 遭罚款断网</a><br>
 <a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/20/n12563068.md#1">【翻墙必看】川普获压倒性胜利将获证实</a><br>
@@ -40,7 +40,7 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 367,962,562 人
+!共 367,962,370 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
