--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -11,14 +11,14 @@
 <a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12564953.md#1" title="美议员提新法案 禁投资黑名单上中国企业""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/A4-115-1-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12564665.md#1" title="“打倒中共恶魔”联署加速 一个月增10万""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/145159-320x200.png">&nbsp;</a>
 <a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/10/24/n12499541.md#1" title="【思想领袖】吉尼斯：如何应对中共无声入侵""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/download-40-320x200.jpg">&nbsp;</a>
-<a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12564900.md#1" title="麦肯娜尼：为了“宪法程序” 川普不应让步""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/000_1R17CJ-320x200.jpg">&nbsp;</a>
+<a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12564900.md#1" title="麦肯纳尼：为了“宪法程序” 川普不应让步""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/000_1R17CJ-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/cvusyr3283/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://cvusyr3283.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>21分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565157.md#1">【直播】美各州挺川集会 制止拜登窃选</a><br>
-:clock8: <em>22分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12566323.md#1">选举委员会主席：川普正将合法指控交法院</a><br>
-:clock8: <em>46分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12566305.md#1">研究：戴口罩对预防中共病毒无显着效果</a><br>
-:clock8: <em>56分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12566190.md#1">【一线采访】内蒙爆疫情 满洲里封城 火车停运</a><br>
+:clock8: <em>40分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565157.md#1">【直播】美各州挺川集会 制止拜登窃选</a><br>
+:clock8: <em>41分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12566323.md#1">选举委员会主席：川普正将合法指控交法院</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12566305.md#1">研究：戴口罩对预防中共病毒无显着效果</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12566190.md#1">【一线采访】内蒙爆疫情 满洲里封城 火车停运</a><br>
 :clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12566004.md#1">【名家专栏】川普的成就和未来的方向</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565965.md#1">美国老人买东西钱不够 18岁超市员工帮付款</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565965.md#1">美国老人买东西钱不够 18岁超市员工帮付款</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/20/n12562519.md#1">浙江早餐店“翻墙”播境外节目 遭罚款断网</a><br>
 <a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/20/n12563068.md#1">【翻墙必看】川普获压倒性胜利将获证实</a><br>
@@ -39,7 +39,7 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 367,962,605 人
+!共 367,962,649 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
