--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -4,7 +4,7 @@
 <a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12566323.md#1" title="选举委员会主席：川普正将合法指控交法院""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/supreme-court-e1593757698727-1200x675-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12566226.md#1" title="农民今年损失惨重 中共却开征私产宅基地费""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/1110290246031758-600x400-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565742.md#1" title="中国债务累计至GDP3.3倍 企业债居半""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/AFP_China-construction-worker-320x200.jpg">&nbsp;</a>
-<a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565761.md#1" title="【大选更新11.21】川普：乔州舞弊信息将出炉""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1286743499-320x200.jpg">&nbsp;</a>
+<a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565761.md#1" title="【大选更新11.21】DC发起摩托骑行 继续挺川""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/2011142233551160-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/20/n12564664.md#1" title="《狮子王》复仇记：王位之争即正邪大战""><img width="73" src="https://i.epochtimes.com/assets/uploads/2019/07/1907161125101470-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565131.md#1" title="川普政府拟再把四中企列入中共军企黑名单""><img width="73" src="https://i.epochtimes.com/assets/uploads/2013/01/1010201428232208-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/20/n12564746.md#1" title="鲍威尔：四敌国介入过美国大选制表服务器""><img width="73" src="https://i.epochtimes.com/assets/uploads/2017/09/GettyImages-459271274-320x200.jpg">&nbsp;</a>
@@ -13,12 +13,12 @@
 <a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/10/24/n12499541.md#1" title="【思想领袖】吉尼斯：如何应对中共无声入侵""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/download-40-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12564900.md#1" title="麦肯纳尼：为了“宪法程序” 川普不应让步""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/000_1R17CJ-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/cvusyr3283/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://cvusyr3283.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>7分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12564930.md#1">世界各国的主力战舰  欧洲的中型驱逐舰</a><br>
-:clock8: <em>8分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12566391.md#1">朱利安尼：Dominion高管和安提法关系密切</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565157.md#1">【直播】美各州挺川集会 制止拜登窃选</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12566323.md#1">选举委员会主席：川普正将合法指控交法院</a><br>
+:clock8: <em>49分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12564930.md#1">世界各国的主力战舰  欧洲的中型驱逐舰</a><br>
+:clock8: <em>50分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12566391.md#1">朱利安尼：Dominion高管和安提法关系密切</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565157.md#1">【直播】美各州挺川集会 制止拜登窃选</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12566323.md#1">选举委员会主席：川普正将合法指控交法院</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12566305.md#1">研究：戴口罩对预防中共病毒无显着效果</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12566190.md#1">【一线采访】内蒙爆疫情 满洲里封城 火车停运</a><br>
+:clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12566190.md#1">【一线采访】内蒙爆疫情 满洲里封城 火车停运</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/20/n12562519.md#1">浙江早餐店“翻墙”播境外节目 遭罚款断网</a><br>
 <a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/20/n12563068.md#1">【翻墙必看】川普获压倒性胜利将获证实</a><br>
@@ -38,7 +38,7 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 367,964,309 人
+!共 367,964,318 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
